--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
+    "react-type-animation": "^1.1.3",
     "tailwindcss": "^3.1.4"
   }
 }
