--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "react-type-animation": "^1.1.3",
+    "swiper": "^8.3.1",
     "tailwindcss": "^3.1.4"
   }
 }
